avoiding page break inside collaps content (printer)

--- a/assets/_scss/modules/_printer.scss
+++ b/assets/_scss/modules/_printer.scss
@@ -16,7 +16,9 @@
     display: block;
     page-break-before: always;
     }
-
+  .content {
+    page-break-inside: avoid;
+  }
   .printer-hidden {
     display: none;
   }
